# ginga-srpp

./: BKPinstall.sh  Recomsaida  Resto  Saida.txt  compile.sh  install.sh  lince.doxyfile.config  makeclean.sh  recom.sh  resto.sh  saida
LinceUtil/: Makefile  Makefile.in  aclocal.m4  autogen.sh  config.status  configure  configure.in  libtool  stamp-h1  utilconfig.h  utilconfig.h.in
LinceUtil/autom4te.cache/: output.1  output.3  requests  traces.1  traces.3
LinceUtil/include/util/: BadArgumentException.h  Doxfile  InitializationException.h  LoggerUtil.h  Utils.h
LinceUtil/nbproject/: Makefile-Default.mk  Makefile-impl.mk  Makefile-variables.mk  Package-Default.bash  configurations.xml  project.xml
LinceUtil/nbproject/private/: configurations.xml
LinceUtil/src/util/: BadArgumentException.cpp  InitializationException.cpp  LoggerUtil.cpp  Utils.cpp
LinceUtil/test/: Makefile  Makefile.am  Makefile.in  UTest  UTest.cpp
LinceUtil/test/.deps/: UTest.Po
LinceUtil/test/.libs/: UTest
Recommender/Database/: Makefile  Makefile.in  config.h  config.h.in  config.h~  config.status  configure  configure.in  libtool
Recommender/Database/autom4te.cache/: output.1  output.2  traces.1  traces.2
Recommender/Database/include/: Database.h  Database.h~  Makefile  Makefile.in
Recommender/Database/src/: Database.cpp  Makefile  Makefile.am  Makefile.am~  Makefile.in
Recommender/Database/src/.deps/: Database.Po  sqlite3.Po
Recommender/Database/test/: Makefile  Makefile.in
Recommender/Database/test/.deps/: main.Po
Recommender/MiningAlgorithm/include/: IMiningAlgorithmApriori.h  IMiningAlgorithmApriori.h~  Makefile  Makefile.am  Makefile.am~  Makefile.in  MiningAlgorithm.h  SI.h
Recommender/MiningAlgorithm/include/apriori23/: Input_Output_Manager.hpp
Recommender/MiningAlgorithm/include/ikmeans/: cb.h  cb.h~  file.h  ikmeans.h  ikmeans.h~  interfc.h  kmeans.h  memctrl.h  random.h  reporting.h
ginga-cpp/src/: Makefile  Makefile.am  Makefile.am~  Makefile.in  diffMain.txt  main.cpp
ginga-cpp/src/.deps/: main.Po
gingacc-cpp/gingacc-cgc/: Makefile  autogen.sh  config.h  config.h.in  config.h.in~  config.status  configure  configure.in  libtool
gingacc-cpp/gingacc-cgc/autom4te.cache/: output.0  output.1  output.2  requests  traces.0  traces.1  traces.2
gingacc-cpp/gingacc-cgc/include/: IPresentationCGCManager.h  Makefile  Makefile.am  Makefile.in  ProgramHeader.h  ProgramRecorder.h
gingacc-cpp/gingacc-cgc/src/: Makefile  Makefile.am  Makefile.in  ProgramHeader.cpp  ProgramRecorder.cpp
gingacc-cpp/gingacc-cgc/src/.deps/: ProgramHeader.Po  ProgramRecorder.Po
ncl30-cpp/ncl30/: Doxyfile  INSTALL  Makefile  Makefile.am  Makefile.in  README  autogen.sh  config.h  config.status  configure  configure.in  libtool
ncl30-cpp/ncl30-converter/: Doxyfile  Makefile  Makefile.am  Makefile.in  autogen.sh  config.h  config.h.in  config.status  configure  configure.in  libtool
ncl30-cpp/ncl30-converter/autom4te.cache/: output.0  output.1  traces.0  traces.1
ncl30-cpp/ncl30-converter/include/: IDocumentConverter.h  Makefile  Makefile.am  Makefile.in
ncl30-cpp/ncl30-converter/include/framework/: DOMTreeErrorReporter.h  DocumentParser.h  Makefile  Makefile.am  Makefile.in
ncl30-cpp/ncl30-converter/include/ncl/: Makefile  Makefile.am  Makefile.in  NclConnectorsConverter.h  NclDocumentConverter.h  (+2 more)
ncl30-cpp/ncl30-converter/test/: Makefile  Makefile.am  Makefile.in  test.cpp
ncl30-cpp/ncl30-generator/src/: AnchorGenerator.cpp  AssessmentStatementGenerator.cpp  AttributeAssessmentGenerator.cpp  BindGenerator.cpp  CausalConnectorGenerator.cpp  CausalLinkGenerator.cpp  CircleSpatialAnchorGenerator.cpp  CompositeRuleGenerator.cpp  CompoundActionGenerator.cpp  CompoundConditionGenerator.cpp  CompoundStatementGenerator.cpp  ConnectorBaseGenerator.cpp  ContentNodeGenerator.cpp  ContextNodeGenerator.cpp  DescriptorBaseGenerator.cpp  DescriptorGenerator.cpp  DescriptorSwitchGenerator.cpp  Generable.cpp  GeneratorUtil.cpp  IntervalAnchorGenerator.cpp  LabeledAnchorGenerator.cpp  LayoutRegionGenerator.cpp  Makefile  Makefile.am  Makefile.am~  Makefile.in  NclDocumentGenerator.cpp  NclFileGenerator.cpp  NclGenerator.cpp  ParameterGenerator.cpp  PortGenerator.cpp  PropertyAnchorGenerator.cpp  RectangleSpatialAnchorGenerator.cpp  RegionBaseGenerator.cpp  RuleBaseGenerator.cpp  SimpleActionGenerator.cpp  SimpleConditionGenerator.cpp  SimpleRuleGenerator.cpp  SwitchNodeGenerator.cpp  SwitchPortGenerator.cpp  (+5 more)
ncl30-cpp/ncl30/autom4te.cache/: output.0  output.1  traces.0  traces.1
ncl30-cpp/ncl30/files/: Makefile  Makefile.am  Makefile.in
ncl30-cpp/ncl30/include/: Base.h  Entity.h  INclDocument.h  Makefile  Makefile.am  Makefile.in  NclDocument.h
ncl30-cpp/ncl30/src/: Base.cpp  Entity.cpp  Makefile  Makefile.am  Makefile.in  NclDocument.cpp  Parameter.cpp
telemidia-util-cpp/: ChangeLog  Doxyfile  INSTALL  Makefile  Makefile.in  README  autogen.sh  config.h  config.status  configure  configure.in  libtool
telemidia-util-cpp/autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
telemidia-util-cpp/include/: Color.h  IColor.h  Makefile  Makefile.am  Makefile.in  Observable.h  Observer.h  functions.h
telemidia-util-cpp/src/: Color.cpp  Makefile  Makefile.am  Makefile.in  functions.cpp
telemidia-util-cpp/src/.deps/: Color.Po  functions.Po
telemidia-util-cpp/test/: Makefile  Makefile.am  Makefile.in  test.cpp
telemidia-util-cpp/test/.deps/: test.Po
wac-state/: .autotools  .cproject  .project  Makefile  autogen.sh  config.h  config.status  configure  configure.in  libtool
wac-state/autom4te.cache/: output.0  output.1  requests  traces.0  traces.1
wac-state/include/: IContextProvider.h  IElementaryState.h  IPresentationState.h  IState.h  IStateManager.h  IStateProvider.h  Makefile  Makefile.am  Makefile.in  PresentationState.h  StateManager.h
wac-state/src/: IElementaryState.cpp  IState.cpp  Makefile  Makefile.am  Makefile.in  PresentationState.cpp  StateManager.cpp  StateManager.cpp~
wac-state/src/.deps/: IElementaryState.Po  PresentationState.Po  StateManager.Po
(+2965 files in other folders)
