AC_INIT(configure.in)

AM_CONFIG_HEADER(config.h)
AM_INIT_AUTOMAKE(gingarecommender-database, 0.1)

AC_LANG_CPLUSPLUS
AC_PROG_CXX([g++])
AM_PROG_LIBTOOL

CXXFLAGS="-fPIC $CXXFLAGS"
CFLAGS="-fPIC $CFLAGS"

# Bring additional directories where things might be found into our
# search path. I don't know why autoconf doesn't do this by default
for spfx in /usr/lib/ /usr/local/lib/ /usr/local/lib/ginga/ /usr/local/lib/ginga/iocontents; do
if test -d ${spfx}; then
LDFLAGS="-L${spfx} $LDFLAGS"
fi
done

for spfx in /usr/include/ /usr/local/include/ /usr/local/include/ginga/; do
if test -d ${spfx}; then
CPPFLAGS="-I${spfx} $CPPFLAGS"
fi
done

#####################
# Recommender check #
#####################

recommender=no
AC_ARG_ENABLE(recommender,
  [  --enable-recommender    build recommender support [[default=no]]],
  enable_recommender="$enableval", enable_recommender=no)

if test x$enable_recommender = xyes; then
      AC_CHECK_HEADER(recommender/sqlite3.h,
        recommender=yes
        NCLET_LIBS='-lrecommender'
        AC_DEFINE(HAVE_RECOMMENDER, 1, [Def to 1 if you have recommender support.]),
        AC_MSG_WARN([
*** Header not found -- recommender support will not be built.]))
fi

AM_CONDITIONAL(RECOMMENDER, test x$recommender = xyes)
AC_SUBST(RECOMMENDER_LIBS)



AC_OUTPUT(
    Makefile include/Makefile src/Makefile test/Makefile)
