# not a GNU package. You can remove this line, if
# have all needed files, that a GNU package needs
AUTOMAKE_OPTIONS = foreign 1.4
LIBS =
SUBDIRS = include/framework/ include/framework/ncl/ include/smil/ \
    include/ncl/ include/ src/converter/framework/ \
    src/converter/framework/ncl/ src/converter/smil/ src/converter/ncl/ \
    test/
