AC_INIT(configure.in)

AM_CONFIG_HEADER(config.h)
AM_INIT_AUTOMAKE(ncl30converter, 0.11.2)

AC_LANG_CPLUSPLUS
AC_PROG_CXX([g++])
AM_PROG_LIBTOOL

CXXFLAGS="-fPIC $CXXFLAGS"
CFLAGS="-fPIC $CFLAGS"

# Bring additional directories where things might be found into our
# search path. I don't know why autoconf doesn't do this by default
for spfx in /usr/lib/ /usr/local/lib/ /usr/local/lib/ginga/; do
if test -d ${spfx}; then
LDFLAGS="-L${spfx} $LDFLAGS"
fi
done

for spfx in /usr/include/ /usr/local/include/ /usr/local/include/ginga/; do
if test -d ${spfx}; then
CPPFLAGS="-I${spfx} $CPPFLAGS"
fi
done

###########
# HEADERS #
###########

##################
# TeleMidia Util #
##################
AC_CHECK_HEADER([util/functions.h], [], AC_MSG_ERROR([

Couldn't find TeleMidia Util headers.
Please install TeleMidia Util.

]))

###########
# NCL 3.0 #
###########
AC_CHECK_HEADER([ncl/Entity.h], [], AC_MSG_ERROR([

Couldn't find NCL 3.0 headers.
Please install NCL 3.0.

]))

###########
# XERCESC #
###########
AC_CHECK_HEADER([xercesc/util/XercesVersion.hpp], [], AC_MSG_ERROR([

Couldn't find xerces-c headers.
Please install xerces-c.

]))

########
# LIBS #
########

##################
# TeleMidia Util #
##################
AC_HAVE_LIBRARY(telemidiautil, , AC_ERROR([

Couldn't find TeleMidia Util library.
Please install TeleMidia Util.

]))

###########
# NCL 3.0 #
###########
AC_HAVE_LIBRARY(ncl30, , AC_ERROR([

Couldn't find NCL 3.0 library.
Please install NCL 3.0.

]))

###########
# XERCESC #
###########
AC_HAVE_LIBRARY(xerces-c, , AC_ERROR([

Couldn't find xerces-c library.
Please install xerces-c.

]))

############################################
# Offering a non-componentized alternative #
############################################
components=yes
AC_ARG_ENABLE(components,
  [  --enable-components build project using components [[default=yes]]],
  enable_components="$enableval", enable_components=yes)

if test x$enable_components = xno; then
   COMPONENTS_LIBS='-lncl30confraxml -lxerces-c \
   -lncl30confrancl -lncl30connclncm -lncl30consmlncm \
   -L/usr/local/lib/ -L/usr/local/lib/ginga/'
   AC_DEFINE(HAVE_COMPSUPPORT, 0, [Def to 0 if you don't have Component support.])
   AC_MSG_WARN([*** Component support will not be built.])

else
   COMPONENTS_LIBS='-ldl -L/usr/local/lib/ -L/usr/local/lib/ginga/'
   AC_DEFINE(HAVE_COMPSUPPORT, 1, [Def to 1 if you have Component support.])
   AC_MSG_RESULT([*** Component support will be built.])
fi

AM_CONDITIONAL(COMPONENTS, test "$enable_components" = "no")
AC_SUBST(COMPONENTS_LIBS)


AC_OUTPUT(Makefile include/framework/Makefile include/framework/ncl/Makefile
    include/ncl/Makefile include/smil/Makefile include/Makefile
    src/converter/framework/Makefile src/converter/framework/ncl/Makefile
    src/converter/smil/Makefile src/converter/ncl/Makefile 
    test/Makefile)
