METASOURCES = AUTO
LIBS =
localIncludedir = /usr/local/include/ginga/recommender/miningalgorithm
localInclude_HEADERS = MiningAlgorithm.h SI.h User.h IMiningAlgorithmApriori.h apriori23/Apriori.hpp apriori23/Apriori_Trie.hpp \ 
apriori23/common.hpp apriori23/Input_Output_Manager.hpp apriori23/Trie.hpp ikmeans/cb.h ikmeans/file.h ikmeans/ikmeans.h ikmeans/interfc.h \
ikmeans/kmeans.h ikmeans/memctrl.h ikmeans/owntypes.h ikmeans/random.h ikmeans/reporting.h
