METASOURCES = AUTO
LIBS =


animationIncludedir = /usr/local/include/ginga/ncl/animation
animationInclude_HEADERS = animation/Animation.h


componentsIncludedir = /usr/local/include/ginga/ncl/components
componentsInclude_HEADERS = components/AbsoluteReferenceContent.h \
    components/CompositeNode.h components/Content.h components/ContentNode.h \
    components/ContentTypeManager.h components/ContextNode.h \
	components/IllegalNodeTypeException.h components/Node.h \
	components/NodeEntity.h \
	components/PrivateBase.h \
	components/ReferenceContent.h components/RelativeReferenceContent.h

connectorsIncludedir = /usr/local/include/ginga/ncl/connectors
connectorsInclude_HEADERS = connectors/Action.h connectors/Assessment.h \
    connectors/AssessmentStatement.h connectors/AttributeAssessment.h \
    connectors/CausalConnector.h connectors/CompoundAction.h \
	connectors/CompoundCondition.h connectors/CompoundStatement.h \
	connectors/ConditionExpression.h connectors/Connector.h \
	connectors/ConnectorBase.h connectors/EventTransitionAssessment.h \
	connectors/EventUtil.h connectors/Role.h connectors/SimpleAction.h \
	connectors/SimpleCondition.h connectors/Statement.h \
	connectors/TriggerExpression.h connectors/ValueAssessment.h


descriptorIncludedir = /usr/local/include/ginga/ncl/descriptor
descriptorInclude_HEADERS = descriptor/Descriptor.h \
    descriptor/DescriptorBase.h descriptor/DescriptorUtil.h \
    descriptor/GenericDescriptor.h


interfacesIncludedir = /usr/local/include/ginga/ncl/interfaces
interfacesInclude_HEADERS = interfaces/Anchor.h \
    interfaces/CircleSpatialAnchor.h interfaces/ContentAnchor.h \
    interfaces/InterfacePoint.h interfaces/IntervalAnchor.h \
    interfaces/LabeledAnchor.h interfaces/LambdaAnchor.h interfaces/Port.h \
    interfaces/PropertyAnchor.h interfaces/RectangleSpatialAnchor.h \
	interfaces/RelativeTimeIntervalAnchor.h interfaces/SampleIntervalAnchor.h \
	interfaces/SpatialAnchor.h interfaces/SwitchPort.h interfaces/TextAnchor.h


layoutIncludedir = /usr/local/include/ginga/ncl/layout
layoutInclude_HEADERS = layout/DeviceLayout.h layout/IDeviceLayout.h \
    layout/LayoutRegion.h layout/RegionBase.h


linkIncludedir = /usr/local/include/ginga/ncl/link
linkInclude_HEADERS = link/Bind.h link/CausalLink.h link/Link.h \
    link/LinkComposition.h


metainformationIncludedir = /usr/local/include/ginga/ncl/metainformation
metainformationInclude_HEADERS = metainformation/Meta.h \
    metainformation/Metadata.h


navigationIncludedir = /usr/local/include/ginga/ncl/navigation
navigationInclude_HEADERS = navigation/FocusDecoration.h \
    navigation/KeyNavigation.h


reuseIncludedir = /usr/local/include/ginga/ncl/reuse
reuseInclude_HEADERS = reuse/ReferNode.h reuse/ReferredNode.h


switchesIncludedir = /usr/local/include/ginga/ncl/switches
switchesInclude_HEADERS = switches/CompositeRule.h switches/DescriptorSwitch.h \
    switches/Rule.h switches/RuleBase.h switches/SimpleRule.h \
    switches/SwitchContent.h switches/SwitchNode.h


timeIncludedir = /usr/local/include/ginga/ncl/time/flexibility
timeInclude_HEADERS = time/flexibility/LinearTimeCostFunction.h \
    time/flexibility/TemporalFlexibilityFunction.h


transitionIncludedir = /usr/local/include/ginga/ncl/transition
transitionInclude_HEADERS = transition/Transition.h \
    transition/TransitionBase.h transition/TransitionUtil.h


utilIncludedir = /usr/local/include/ginga/ncl/util
utilInclude_HEADERS = util/Comparator.h


nclIncludedir = /usr/local/include/ginga/ncl
nclInclude_HEADERS = Base.h Entity.h IllegalBaseTypeException.h \
	NclDocument.h Parameter.h IPrivateBaseContext.h
