METASOURCES = AUTO
LIBS =
localIncludedir = /usr/local/include/ginga/converter/ncl/
localInclude_HEADERS = NclComponentsConverter.h NclConnectorsConverter.h \
	NclDocumentConverter.h NclImportConverter.h NclInterfacesConverter.h \
	NclLayoutConverter.h NclLinkingConverter.h \
	NclMetainformationConverter.h NclPresentationControlConverter.h \
	NclPresentationSpecConverter.h NclStructureConverter.h \
	NclTransitionConverter.h
