METASOURCES = AUTO
LIBS =
localIncludedir = /usr/local/include/ginga/converter/framework/ncl/

localInclude_HEADERS = NclComponentsParser.h NclConnectorsParser.h \
	NclDocumentParser.h NclImportParser.h NclInterfacesParser.h \
	NclLayoutParser.h NclLinkingParser.h NclMetainformationParser.h \
	NclPresentationControlParser.h NclPresentationSpecificationParser.h \
	NclStructureParser.h NclTransitionParser.h
